--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marvel's Heroes</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <h2>Here Comes a New Challenger!</h2>
-    <script src="/js/clase_heroe.js"></script>
-    <script src="/js/informacion.js"></script>
+    <script src="js/clase_heroe.js"></script>
+    <script src="js/informacion.js"></script>
 </body>
 
 </html>
